Day8/ingress/hello-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - ports: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx
  type: NodePort
